# amazonka-lite

./: README.md  cabal.project  generate-ci.sh
.github/workflows/: haskell-ci.yml
amazonka/: amazonka.cabal
amazonka-s3/: amazonka-s3.cabal
amazonka/src/Control/Monad/Trans/: AWS.hs
core/: amazonka-core.cabal
core/src/Network/AWS/Data/: Body.hs  ByteString.hs  JSON.hs  Log.hs  Map.hs  Query.hs  Text.hs
lib/amazonka-core/: amazonka-core.cabal
lib/amazonka-core/src/Amazonka/: Types.hs
test/: amazonka-test.cabal
test/src/Test/AWS/: TH.hs
