cabal-version:      3.0
name:               amazonka-core
version:            2.0

common base
  default-language:   Haskell2010
  ghc-options:
    -Wall -funbox-strict-fields -fwarn-incomplete-uni-patterns
    -fwarn-incomplete-record-updates -fwarn-missing-deriving-strategies
    -fwarn-unused-packages
  build-depends:      base >=4.12 && <5
  default-extensions:
    DeriveGeneric
    DerivingStrategies

library
  import:          base
  hs-source-dirs:  src
  exposed-modules:
    Amazonka.Types
